[package]
name = "ivy-engine"
version = "0.10.5"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "Application and game framework for Rust"

license-file = "./LICENSE"
keywords = ["graphics", "physics", "game-engine", "game", "vulkan"]
documentation = "https://lib.rs/ivy"
repository = "https://github.com/ten3roberts/ivy-engine"
readme = "./README.md"

[workspace]
members = [
  "ivy-core",
  "ivy-profiling",
  "ivy-input",
  "ivy-postprocessing",
  "ivy-physics",
  "ivy-collision",
  "ivy-random",
  "ivy-assets",
  "ivy-wgpu",
  "ivy-gltf",
  "ivy-scene",
  "ivy-wgpu-types",
  "ivy-profiling",
]

[workspace.dependencies]
naga_oil = "0.14"
anyhow = { version = "1.0", features = ["backtrace"] }
async-std = { version = "1.0"}
atomic_refcell = "0.1"
bytemuck = { version = "1.9.1", features = ["derive"] }
dashmap = "6.0"
flax = { git = "https://github.com/ten3roberts/flax", features = [ "serde", "derive", "puffin", "rayon" ] }
flume = "0.11"
futures = "0.3"
glam = { version = "0.28", features = ["bytemuck", "rand"] }
gltf = "1.0"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "rayon", "hdr"] }
itertools = "0.13"
mikktspace = "0.3"
once_cell = "1.0"
palette = "0.7"
parking_lot = "0.12"
puffin = "0.19"
puffin_http = "0.16"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
slab = "0.4"
slotmap = "1.0"
smallvec = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-tree = "0.4"
wgpu = "0.20.1"
winit = "0.30"
rayon = "1.0"
ordered-float = "4.2"

[dependencies]
ivy-collision = { path = "./ivy-collision", version = "0.10" }
ivy-core = { path = "./ivy-core", version = "0.10" }
ivy-input = { path = "./ivy-input", version = "0.10" }
ivy-physics = { path = "./ivy-physics", version = "0.10" }
ivy-postprocessing = { path = "./ivy-postprocessing", version = "0.10" }
ivy-random = { path = "./ivy-random", version = "0.10" }
ivy-assets = { path = "./ivy-assets", version = "0.10" }
ivy-wgpu = { path = "./ivy-wgpu", version = "0.10" }
ivy-gltf = { path = "./ivy-gltf", version = "0.1.0" }
ivy-scene = { path = "./ivy-scene", version = "0.1.0" }
ivy-wgpu-types = { path = "./ivy-wgpu-types", version = "0.1.0" }

regex = "1.0"
flax.workspace = true
image.workspace = true
bytemuck.workspace = true

[dev-dependencies]
color-eyre = "0.6.1"

anyhow.workspace = true
atomic_refcell.workspace = true
flax.workspace = true
flume.workspace = true
futures.workspace = true
glam.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
thiserror.workspace = true
tokio = { version = "1.18.2", features = ["full"] }
tracing-subscriber.workspace = true
tracing-tree = "0.3.0"
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true
async-std.workspace = true

[features]
default = []
serialize = [
  "ivy-core/serialize",
  "ivy-physics/serialize",
]
profile = [ "ivy-core/profile" ]

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.parking_lot]
opt-level = 3

[profile.release]
debug = true
