[package]
name = "ivy-engine"
version = "0.10.5"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "Application and game framework for Rust"

license-file = "./LICENSE"
keywords = ["graphics", "physics", "game-engine", "game", "vulkan"]
documentation = "https://lib.rs/ivy"
repository = "https://github.com/ten3roberts/ivy-engine"
readme = "./README.md"

[workspace.package]
license-file = "./LICENSE"

[workspace]
exclude = ["violet"]
members = [
  "ivy-core",
  "ivy-profiling",
  "ivy-input",
  "ivy-postprocessing",
  "ivy-physics",
  "ivy-random",
  "ivy-assets",
  "ivy-wgpu",
  "ivy-gltf",
  "ivy-scene",
  "ivy-wgpu-types",
  "ivy-profiling",
  "ivy-graphics",
  "ivy-game",
  "ivy-ui",
]

[workspace.dependencies]
color-backtrace = "0.6"
rand_pcg = "0.3"
naga_oil = "0.15"
anyhow = { version = "1.0", features = ["backtrace"] }
async-std = { version = "1.0"}
atomic_refcell = "0.1"
bytemuck = { version = "1.9.1", features = ["derive"] }
dashmap = "6.0"
flax = { git = "https://github.com/ten3roberts/flax", features = [ "serde", "derive", "puffin", "rayon" ] }
flume = "0.11"
futures = "0.3"
glam = { version = "0.28", features = ["bytemuck", "rand"] }
gltf = "1.0"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "rayon", "hdr"] }
itertools = "0.13"
mikktspace = "0.3"
once_cell = "1.0"
palette = "0.7"
parking_lot = "0.12"
puffin = "0.19"
puffin_http = "0.16"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
slab = "0.4"
slotmap = "1.0"
smallvec = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-tree = "0.4"
wgpu = "22.1.0"
winit = "0.30"
rayon = "1.0"
ordered-float = "4.2"
rapier3d = { version = "0.22", features = ["simd-stable", "parallel"] }
nalgebra = { version = "0.33", features = ["convert-glam028"] }
violet = { path = "./violet", version = "*" }

[dependencies]
ivy-assets = { path = "./ivy-assets", version = "0.10" }
ivy-core = { path = "./ivy-core", version = "0.10" }
ivy-game = { path = "./ivy-game", version = "0.1.0" }
ivy-gltf = { path = "./ivy-gltf", version = "0.1.0" }
ivy-graphics = { path = "./ivy-graphics", version = "0.1.0" }
ivy-input = { path = "./ivy-input", version = "0.10" }
ivy-physics = { path = "./ivy-physics", version = "0.10" }
ivy-postprocessing = { path = "./ivy-postprocessing", version = "0.10" }
ivy-random = { path = "./ivy-random", version = "0.10" }
ivy-scene = { path = "./ivy-scene", version = "0.1.0" }
ivy-ui = { path = "./ivy-ui", version = "*" }
ivy-wgpu = { path = "./ivy-wgpu", version = "0.10" }
ivy-wgpu-types = { path = "./ivy-wgpu-types", version = "0.1.0" }

regex = "1.0"
flax.workspace = true
image.workspace = true
bytemuck.workspace = true

[dev-dependencies]
violet.workspace = true
color-eyre = "0.6.1"
color-backtrace.workspace = true
rand.workspace = true
rand_pcg.workspace = true
anyhow.workspace = true
atomic_refcell.workspace = true
flax.workspace = true
flume.workspace = true
futures.workspace = true
glam.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing-tree = "0.4.0"
tracing.workspace = true
wgpu.workspace = true
itertools.workspace = true
winit.workspace = true
async-std.workspace = true
rapier3d.workspace = true

[features]
default = []
serde = [
  "ivy-core/serde",
  "ivy-physics/serde",
  "ivy-wgpu/serde",
  "ivy-wgpu-types/serde",
  "ivy-assets/serde",
]
profile = [ "ivy-core/profile" ]

[profile.dev.package]
image = { opt-level = 3, debug = false, debug-assertions = false }
png = { opt-level = 3, debug = false }
parking_lot = { opt-level = 3, debug = false }

[profile.release]
debug = true

[profile.dev.package.rapier3d]
opt-level = 3

[patch.crates-io]
flax = { git = "https://github.com/ten3roberts/flax" }
