[package]
name = "ivy-assets"
version = "0.10.0"
edition = "2021"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-profiling = { path = "../ivy-profiling/" }

tynm.workspace = true
slab.workspace = true
atomic_refcell.workspace = true
image.workspace = true
dashmap.workspace = true
slotmap.workspace = true
tracing.workspace = true
parking_lot = { workspace = true, features = ["send_guard"]}
flume.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
async-std.workspace = true
serde = { workspace =  true, optional = true }
serde_json = { workspace =  true, optional =  true }
derivative.workspace = true
futures-signals.workspace = true

[features]
serde = [ "dep:serde", "serde_json" ]
