[package]
name = "ivy-base"
version = "0.10.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "Base crate for the Ivy game engine"

license-file = "../LICENSE"
keywords = ["graphics", "physics", "game-engine", "game", "vulkan"]
documentation = "https://lib.rs/ivy-base"
repository = "https://github.com/ten3roberts/ivy"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
flume.workspace = true
tracing.workspace = true
palette.workspace = true
glam.workspace = true
serde = { workspace = true, optional = true }
flax.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
downcast-rs = "1.2.0"
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }
ivy-random = { path = "../ivy-random", version = "0.10.0" }
records = "0.2.0"
ezy = { version = "0.1.1", features = ["glam"] }
rand.workspace = true
rand_distr.workspace = true

[features]
default = []
serialize = ["serde", "glam/serde", "palette/serializing"]
