[package]
name = "ivy-collision"
version = "0.10.3"
edition = "2018"
description = "3D collision crate for Ivy"

license-file = "../LICENSE"
keywords = [ "physics", "collisions", "rigidbody", "game" ]
documentation = "https://lib.rs/ivy-collision"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
derive-for = "1.2.2"
derive_more = "0.99.17"
flume = "0.10.10"
hecs = "0.7.5"
hecs-schedule = "0.6.0"
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-resources = { path = "../ivy-resources", version = "0.10.0" }
ordered-float = "2.10.0"
palette = "0.6.0"
rayon = "1.5.1"
records = "0.2.0"
slotmap = "1.0.6"
smallvec = "1.8.0"
glam = "0.20.2"
