[package]
name = "ivy-collision"
version = "0.10.3"
edition = "2021"
description = "3D collision crate for Ivy"

license-file = "../LICENSE"
keywords = ["physics", "collisions", "rigidbody", "game"]
documentation = "https://lib.rs/ivy-collision"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arrayvec = "0.7.2"
derive-for = "1.2.2"
derive_more = "0.99.17"
ezy = { version = "0.1.1", features = ["glam"] }
flax.workspace = true
flume.workspace = true
glam.workspace = true
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }
ordered-float = "3.0.0"
palette.workspace = true
rayon = "1.5.2"
slotmap.workspace = true
smallvec = "1.8.0"
tracing.workspace = true
