[package]
name = "ivy-core"
version = "1.7.0"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
crossbeam-channel = { version = "0.5.1", optional = true }
derive-for = "1.2.2"
derive_more = "0.99.16"
downcast-rs = "1.2.0"
flume = "0.10.9"
hecs = "0.6.5"
ivy-resources = { path = "../ivy-resources", version = "1.4.0" }
log = { version = "0.4.14", features = ["std"] }
palette = "0.6.0"
thiserror = "1.0.30"
ultraviolet = "0.8.1"
