[package]
name = "ivy-gltf"
version = "0.1.0"
edition = "2021"
description = "Gltf asset management for Ivy"
license-file.workspace = true

[dependencies]
ivy-core = { path = "../ivy-core" }
ivy-assets = { path = "../ivy-assets" }
ivy-profiling = { path = "../ivy-profiling" }
ivy-graphics = { path = "../ivy-graphics" }

anyhow.workspace = true
gltf.workspace = true
glam.workspace = true
tracing.workspace = true
itertools.workspace = true
flax.workspace = true
image.workspace = true
async-std.workspace = true
futures.workspace = true
ordered-float.workspace = true
base64.workspace = true
urlencoding.workspace = true
rayon.workspace = true
