[package]
name = "ivy-graphics"
version = "0.10.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"
description = "Provides high level graphics abstractions like Meshes, Materials, etc. Builds on top of ivy-vulkan"

license-file = "../LICENSE"
keywords = ["high-level", "graphics", "windowing", "game", "vulkan"]
documentation = "https://lib.rs/ivy-window"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
ash = "0.36.0"
base64 = "0.13.0"
derive_more = "0.99.17"
glfw.workspace = true
gltf = { version = "1.0.0", features = ["KHR_lights_punctual"] }
itertools.workspace = true
flax.workspace = true
palette.workspace = true
glam.workspace = true
flume.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-image = { path = "../ivy-image", version = "0.10.0" }
ivy-input = { path = "../ivy-input", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }
ivy-window = { path = "../ivy-window", version = "0.10.0" }
once_cell = "1.10.0"
ordered-float = "3.0.0"
parking_lot.workspace = true
rectangle-pack = "0.4.2"
serde = { workspace = true, optional = true }
slotmap.workspace = true
smallvec = "1.8.0"
tracing.workspace = true

[features]
default = []
serialize = ["serde", "glam/serde"]

[build-dependencies]
anyhow = "1.0.57"
shaderc = "0.8.0"
walkdir = "2.3.2"
