[package]
name = "ivy-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
ivy-core = { path = "../ivy-core" }
ivy-assets = { path = "../ivy-assets" }
ivy-profiling = { path = "../ivy-profiling" }


anyhow.workspace = true
glam.workspace = true
tracing.workspace = true
itertools.workspace = true
flax.workspace = true
image.workspace = true
async-std.workspace = true
futures.workspace = true
ordered-float.workspace = true
mikktspace.workspace = true
