[package]
name = "ivy-image"
version = "0.1.0"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"
description = "stb image loading library for ivy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.110"
thiserror = "1.0.30"

[build-dependencies]
cc = "1.0.72"
