[package]
name = "ivy-input"
version = "0.10.3"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2021"

license-file = "../LICENSE"
keywords = ["graphics", "input", "keyboard", "game", "vulkan"]
documentation = "https://lib.rs/ivy-input"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
description = "Input handling crate for Ivy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume.workspace = true
glfw.workspace = true
ivy-core = { path = "../ivy-core", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }
ivy-window = { path = "../ivy-window", version = "0.10.0" }
flax.workspace = true
glam.workspace = true
winit.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
