[package]
name = "ivy-physics"
version = "0.10.3"
edition = "2021"
description = "Provides physics for the Ivy framework"
license-file.workspace = true

keywords = ["physics", "collisions", "rigidbody", "game"]
documentation = "https://lib.rs/ivy-physics"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-core = { path = "../ivy-core", version = "0.10.0" }
ivy-random = { path = "../ivy-random", version = "0.10.0" }
ivy-collision = { path = "../ivy-collision", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }

rayon = "1.5.2"
smallvec = "1.8.0"
itertools.workspace = true
slotmap.workspace = true
flax.workspace = true
glam.workspace = true
flume.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serialize = ["serde", "glam/serde"]
