[package]
name = "ivy-physics"
version = "0.10.3"
edition = "2021"
description = "Provides physics for the Ivy framework"
license-file.workspace = true

keywords = ["physics", "collisions", "rigidbody", "game"]
documentation = "https://lib.rs/ivy-physics"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-core = { path = "../ivy-core", version = "0.10.0" }
ivy-random = { path = "../ivy-random", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }

anyhow.workspace = true
flax.workspace = true
flume.workspace = true
glam.workspace = true
itertools.workspace = true
nalgebra.workspace = true
rapier3d.workspace = true
rayon = "1.5.2"
serde = { workspace = true, optional = true }
slotmap.workspace = true
smallvec = "1.8.0"
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
serde = ["dep:serde", "glam/serde", "rapier3d/serde-serialize"]
