[package]
name = "ivy-postprocessing"
version = "0.10.1"
edition = "2018"
description = "post processing helpers for ivy"

license-file = "../LICENSE"
keywords = [ "pbr", "post-processing", "vulkan", "graphics", "effects" ]
documentation = "https://lib.rs/ivy-postprocessing"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
derive_more = "0.99.17"
hecs = { version = "0.7.3", features = [ "macros" ] }
itertools = "0.10.3"
ivy-graphics = { path = "../ivy-graphics", version = "0.10.0" }
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-rendergraph = { path = "../ivy-rendergraph", version = "0.10.0" }
ivy-resources = { path = "../ivy-resources", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }
glam = "0.20"
once_cell = "1.9.0"
