[package]
name = "ivy-postprocessing"
version = "0.10.3"
edition = "2021"
description = "post processing helpers for ivy"

license-file = "../LICENSE"
keywords = ["pbr", "post-processing", "vulkan", "graphics", "effects"]
documentation = "https://lib.rs/ivy-postprocessing"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }
ivy-graphics = { path = "../ivy-graphics", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }
ivy-rendergraph = { path = "../ivy-rendergraph", version = "0.10.0" }

anyhow.workspace = true
flax.workspace = true
itertools.workspace = true
glam.workspace = true
once_cell.workspace = true
