[package]
name = "ivy-postprocessing"
version = "0.10.3"
edition = "2021"
description = "post processing helpers for ivy"
license-file.workspace = true

keywords = ["pbr", "post-processing", "vulkan", "graphics", "effects"]
documentation = "https://lib.rs/ivy-postprocessing"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-core = { path = "../ivy-core", version = "0.10.0" }
ivy-assets = { path = "../ivy-assets", version = "0.10.0" }
ivy-wgpu = { path = "../ivy-wgpu/" }

bytemuck.workspace = true
anyhow.workspace = true
flax.workspace = true
glam.workspace = true
image.workspace = true
itertools.workspace = true
once_cell.workspace = true
wgpu.workspace = true
async-std.workspace = true
futures.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
