[package]
name = "ivy-presets"
version = "0.10.3"
edition = "2021"
description = "Contains common presets for quickly setting up an application"

license-file = "../LICENSE"
keywords = [ "high-level", "rendering", "graphics", "game" ]
documentation = "https://lib.rs/ivy-presets"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivy-ui = { path = "../ivy-ui", version = "0.10.0" }
ivy-base = { path = "../ivy-base", version = "0.10.0" }
ivy-vulkan = { path = "../ivy-vulkan", version = "0.10.0" }
ivy-graphics = { path = "../ivy-graphics", version = "0.10.0" }
ivy-resources = { path = "../ivy-resources", version = "0.10.0" }
ivy-rendergraph = { path = "../ivy-rendergraph", version = "0.10.0" }
ivy-postprocessing = { path = "../ivy-postprocessing", version = "0.10.0" }

thiserror.workspace = true
flax.workspace = true
slotmap.workspace = true
