[package]
name = "ivy-random"
version = "0.10.3"
edition = "2018"
description = "Provides random utility functions to the ivy framework"

license-file = "../LICENSE"
keywords = [ "rand", "random", "linear-algebra", "vector" ]
documentation = "https://lib.rs/ivy-random"
repository = "https://github.com/ten3roberts/ivy"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
glam = "0.20.2"
